# ft_linear_regression

./: README.md
datasets/: data0.csv
files/: Makefile  train.py
files/includes/: ft_linear_regression.h
files/srcs/: compute.c  ft_split.c  ft_utils.c  main.c  train.c
files/v1/: CMakeLists.txt  Makefile
files/v1/includes/: ft_linear_regression.h
files/v1/srcs/: compute.c  dataset.c  ft_len.c  ft_utils.c  get_next_line.c  theta.c  train.c
files/v2/: precision.py  predict.py  visualize.py
